# mp2-lab4-polynomial

./: CMakeLists.txt
gtest/: CMakeLists.txt
polynomial/: CMakeLists.txt  polynomial.cpp  polynomial.h  sample_polynomial.cpp
polynomial_test/: CMakeLists.txt  test_polynomial.cpp
